Update persona statuses: Carlos=Single, Sofia=In a Relationship, Maria=Young Family; Update footer text to remove 'across 50+ countries'

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                             </div>
                             <div class="info-item">
                                 <div class="info-label">Status</div>
-                                <div class="info-value">Single or in Relationship</div>
+                                <div class="info-value">Single</div>
                             </div>
                             <div class="info-item">
                                 <div class="info-label">Origin</div>
@@ -506,7 +506,7 @@
                             </div>
                             <div class="info-item">
                                 <div class="info-label">Status</div>
-                                <div class="info-value">Single or Dating</div>
+                                <div class="info-value">In a Relationship</div>
                             </div>
                             <div class="info-item">
                                 <div class="info-label">Education</div>
@@ -728,7 +728,7 @@
                             </div>
                             <div class="info-item">
                                 <div class="info-label">Status</div>
-                                <div class="info-value">Single or Young Family</div>
+                                <div class="info-value">Young Family</div>
                             </div>
                             <div class="info-item">
                                 <div class="info-label">Origin</div>
@@ -839,7 +839,7 @@
 
         <footer style="text-align: center; padding: 40px; color: #7AFF6F; border-top: 2px solid #7AFF6F; margin-top: 60px;">
             <p style="font-size: 1.2em; margin-bottom: 10px;">MyBambu Buyer Personas 2025-2026</p>
-            <p style="color: #aaa;">Generated from comprehensive user data analysis including 2.2M+ users across 50+ countries</p>
+            <p style="color: #aaa;">Generated from comprehensive user data analysis of 2.2M+ users</p>
             <p style="color: #aaa; margin-top: 20px;">Data Sources: Meta Ads, TikTok Ads, Google Analytics, Snowflake User Segmentation Database</p>
         </footer>
     </div>
