--- a/index.html
+++ b/index.html
@@ -164,12 +164,9 @@
             height: 200px;
             border-radius: 50%;
             margin: 0 auto 20px;
-            background: linear-gradient(135deg, #0f3460 0%, #16213e 100%);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 5em;
-            border: 5px solid #7AFF6F;
+            border: 5px solid #0f3460;
+            object-fit: cover;
+            box-shadow: 0 8px 24px rgba(0,0,0,0.3);
         }
 
         .data-summary {
@@ -261,7 +258,7 @@
             <!-- Persona 1: The Established Provider -->
             <div class="persona-card">
                 <div class="persona-header">
-                    <div class="persona-image">👨‍🌾</div>
+                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=400&fit=crop&crop=faces" alt="Miguel - The Established Provider" class="persona-image">
                     <div class="persona-name">Miguel</div>
                     <div class="persona-tagline">The Established Provider</div>
                 </div>
@@ -369,7 +366,7 @@
             <!-- Persona 2: The Digital Native -->
             <div class="persona-card">
                 <div class="persona-header">
-                    <div class="persona-image">🎯</div>
+                    <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?w=400&h=400&fit=crop&crop=faces" alt="Carlos - The Digital Native" class="persona-image">
                     <div class="persona-name">Carlos</div>
                     <div class="persona-tagline">The Digital Native</div>
                 </div>
@@ -480,7 +477,7 @@
             <!-- Persona 3: The Young Professional -->
             <div class="persona-card">
                 <div class="persona-header">
-                    <div class="persona-image">👩‍💼</div>
+                    <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=400&h=400&fit=crop&crop=faces" alt="Sofia - The Young Professional" class="persona-image">
                     <div class="persona-name">Sofia</div>
                     <div class="persona-tagline">The Young Professional</div>
                 </div>
@@ -591,7 +588,7 @@
             <!-- Persona 4: The Ambitious Entrepreneur -->
             <div class="persona-card">
                 <div class="persona-header">
-                    <div class="persona-image">💼</div>
+                    <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=400&h=400&fit=crop&crop=faces" alt="Ricardo - The Ambitious Entrepreneur" class="persona-image">
                     <div class="persona-name">Ricardo</div>
                     <div class="persona-tagline">The Ambitious Entrepreneur</div>
                 </div>
@@ -702,7 +699,7 @@
             <!-- Persona 5: The Recent Arrival -->
             <div class="persona-card">
                 <div class="persona-header">
-                    <div class="persona-image">🌟</div>
+                    <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=400&h=400&fit=crop&crop=faces" alt="Maria - The Recent Arrival" class="persona-image">
                     <div class="persona-name">Maria</div>
                     <div class="persona-tagline">The Recent Arrival</div>
                 </div>
