Update Key Insights: Replace US-Based Users stat with Active Accounts 2025

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                     <div class="stat-label">Total Users</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-value">34%</div>
-                    <div class="stat-label">US-Based Users</div>
+                    <div class="stat-value">289,592</div>
+                    <div class="stat-label">Active Accounts (2025)</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-value">25-34</div>
