Add state-specific targeting insights for each user persona

--- a/index.html
+++ b/index.html
@@ -159,6 +159,26 @@
             left: 10px;
         }
 
+        .state-insight {
+            background: rgba(0, 217, 255, 0.15);
+            padding: 20px;
+            border-radius: 10px;
+            border-left: 4px solid #00D9FF;
+            margin-top: 15px;
+        }
+
+        .state-insight-title {
+            color: #00D9FF;
+            font-weight: 600;
+            font-size: 1.1em;
+            margin-bottom: 10px;
+        }
+
+        .state-insight-text {
+            color: #fff;
+            line-height: 1.8;
+        }
+
         .persona-image {
             width: 200px;
             height: 200px;
@@ -359,6 +379,13 @@
                             <li>Partnerships with Hispanic businesses and churches</li>
                             <li>WhatsApp marketing campaigns</li>
                         </ul>
+                        <div class="state-insight">
+                            <div class="state-insight-title">🎯 State Targeting Insight</div>
+                            <div class="state-insight-text">
+                                <strong>Primary Target: Texas and California</strong><br>
+                                Texas leads with the largest remittance volume to Mexico ($9B annually) and experienced the largest Latino population increase (+242,306 in 2023). California follows with $20.4B in remittances to Mexico and the nation's largest Hispanic population (15.8M). These states have the highest concentration of Mexican-origin immigrants who work in construction and agriculture—Miguel's primary industries. Focus on border regions and major metro areas like Houston, Dallas, Los Angeles, and the Central Valley where 27% of construction workers are Hispanic.
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -470,6 +497,13 @@
                             <li>In-app referral bonuses and gamification</li>
                             <li>Partnerships with gig economy platforms</li>
                         </ul>
+                        <div class="state-insight">
+                            <div class="state-insight-title">🎯 State Targeting Insight</div>
+                            <div class="state-insight-text">
+                                <strong>Primary Target: Florida and New York</strong><br>
+                                Florida (+191,373 Latino population growth in 2023) is ideal for reaching Carlos, particularly Miami-Dade County which gained 1.86M Latinos and has the highest concentration of Colombians, Venezuelans, and Dominicans. Venezuelan populations surged 169% from 2010-2021, making Florida the epicenter for this demographic. New York (3.9M Hispanics) has the largest Dominican population (2.4M) and strong Colombian communities. Both states feature major urban centers with thriving gig economies, entertainment districts, and Hispanic social scenes where Carlos is most active.
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -581,6 +615,13 @@
                             <li>Webinars and educational events</li>
                             <li>Testimonials from successful women users</li>
                         </ul>
+                        <div class="state-insight">
+                            <div class="state-insight-title">🎯 State Targeting Insight</div>
+                            <div class="state-insight-text">
+                                <strong>Primary Target: California, Texas, and New Jersey</strong><br>
+                                California (15.8M Hispanics, 40.8% of state) offers the largest pool of educated Hispanic professionals, particularly in healthcare and education sectors in metro areas like Los Angeles, San Francisco, and San Diego. Texas (12.1M Hispanics, 40.3%) has seen rapid growth in Hispanic professional women, especially in Houston and Dallas. New Jersey (23.5% Hispanic) has higher median incomes among Hispanic households and strong concentrations in healthcare and administrative sectors. These states also have robust women's professional networks and higher rates of college-educated Latina women compared to national averages.
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -692,6 +733,13 @@
                             <li>Trade shows and Hispanic business expos</li>
                             <li>Case studies and success stories</li>
                         </ul>
+                        <div class="state-insight">
+                            <div class="state-insight-title">🎯 State Targeting Insight</div>
+                            <div class="state-insight-text">
+                                <strong>Primary Target: California, Texas, and Florida</strong><br>
+                                California leads with 85,000 Latino-owned employer businesses (generating $25B+ in payroll), with 16% concentrated in construction—Ricardo's primary industry. Texas experienced explosive Latino small business growth (+44% over 10 years) and has the second-largest concentration of Hispanic-owned businesses. Florida's Latino business community grew 191,373 in 2023, with strong entrepreneurial networks in Miami and Tampa. These three states account for nearly half of all Hispanic-owned businesses nationwide and have the most robust Hispanic chambers of commerce, business support networks, and access to contracts in construction and professional services.
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -804,6 +852,13 @@
                             <li>Partnerships with immigration support organizations</li>
                             <li>Trusted referrals from existing users</li>
                         </ul>
+                        <div class="state-insight">
+                            <div class="state-insight-title">🎯 State Targeting Insight</div>
+                            <div class="state-insight-text">
+                                <strong>Primary Target: Florida, Texas, and New York/D.C.</strong><br>
+                                Florida is the epicenter for recent arrivals, particularly Venezuelans (169% population surge 2010-2021) and Central Americans, with Miami-Dade leading in new immigrant settlement. Texas experienced the largest Latino population growth (+242,306 in 2023) with significant Honduran and Guatemalan communities in Houston and Dallas. New York/D.C. corridor received significant numbers of Venezuelan, Honduran, and Guatemalan migrants from 2022-2024. Louisiana has the highest percentage of recent arrivals (30.9% of Hispanics arrived within 5 years). These states have established immigrant support networks, Spanish-language services, and large Central American/Venezuelan communities that facilitate word-of-mouth marketing.
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -837,7 +892,7 @@
         <footer style="text-align: center; padding: 40px; color: #7AFF6F; border-top: 2px solid #7AFF6F; margin-top: 60px;">
             <p style="font-size: 1.2em; margin-bottom: 10px;">MyBambu Buyer Personas 2025-2026</p>
             <p style="color: #aaa;">Generated from comprehensive user data analysis of 2.2M+ users</p>
-            <p style="color: #aaa; margin-top: 20px;">Data Sources: Meta Ads, TikTok Ads, Google Analytics, Snowflake User Segmentation Database</p>
+            <p style="color: #aaa; margin-top: 20px;">Data Sources: Meta Ads, TikTok Ads, Google Analytics, Snowflake User Segmentation Database, U.S. Census Bureau, Pew Research Center, Stanford Latino Entrepreneurship Initiative</p>
         </footer>
     </div>
 </body>
