--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <!-- Persona 1: The Established Provider -->
             <div class="persona-card">
                 <div class="persona-header">
-                    <img src="https://images.unsplash.com/photo-1542909168-82c3e7fdca44?w=400&h=400&fit=crop&crop=faces" alt="Miguel - The Established Provider" class="persona-image">
+                    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=400&h=400&fit=crop&crop=face" alt="Miguel - The Established Provider" class="persona-image">
                     <div class="persona-name">Miguel</div>
                     <div class="persona-tagline">The Established Provider</div>
                 </div>
